python/testData/highlighting/fStringMissingRightBrace.py
f'{42}'
f'{42!r}'
f'{42!r:03}'
f'{42:03}'
f'{42!r:{y}.{z}}'
f'{<error descr="'}' expected"><error descr="Expression expected">'</error></error>
f'{42:{<error descr="'}' expected"><error descr="Expression expected">'</error></error>
f'{42!r:{<error descr="'}' expected"><error descr="Expression expected">'</error></error>
f'{{'
f'{{{<error descr="'}' expected"><error descr="Expression expected">'</error></error>